--- a/base/style.css
+++ b/base/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Source+Sans+Pro:ital,wght@0,400;0,900;1,200;1,400;1,600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Source+Sans+Pro:ital,wght@0,400;0,900;1,200;1,400;1,600&display=swap');
 
 * {
   box-sizing: border-box;
@@ -7,43 +7,4 @@
 body {
   font-family: "Poppins", sans-serif;
   margin: 0;
-  background-color: #b8c6db;
-  background-image: linear-gradient(315deg, #b8c6db, #f5f7fa 100%);
-  min-height: 100vh;
-}
-
-.wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-}
-
-.quiz-container {
-  background-color: #fff;
-  width: 500px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px 5px rgba(100, 100, 100, 0.1);
-}
-
-.quiz-header {
-  padding: 2rem;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-button {
-  background-color: #3f70f8;
-  display: block;
-  width: 100%;
-  color: #fff;
-  padding: 2rem;
-  font-family: inherit;
-  border: none;
-  font-size: 1.3rem;
-  padding: 1rem;
-  border-radius: 0 0 10px 10px;
 }
